# api-check-tklq

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  heroes_repo.py  main.py  models.py
app/data/: __init__.py  heroes.json
app/providers/: __init__.py  base.py  garena_shop.py  mock.py
app/routers/: heroes.py  players.py
tests/: conftest.py  test_heroes.py  test_meta.py  test_players.py  test_providers.py
